// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeJsonLoader transforms correctly using "removeJsonLoader-0" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.yml/,
            use: ['another-loader', 'yml-loader']
        }]
    }
}

"
`;

exports[`removeJsonLoader transforms correctly using "removeJsonLoader-1" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.yml/,
            use: 'yml-loader'
        }]
    }
}
"
`;

exports[`removeJsonLoader transforms correctly using "removeJsonLoader-2" data 1`] = `
"export default {
    module: {
        rules: []
    }
}
"
`;

exports[`removeJsonLoader transforms correctly using "removeJsonLoader-3" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.yml/,
            use: ['another-loader', 'yml-loader']
        }, {
            test: /\\\\.yml/,
            use: 'yml-loader'
        }]
    }
}

"
`;
